--- a/MDB5-STANDARD-UI-KIT-Free-6.4.2/index.html
+++ b/MDB5-STANDARD-UI-KIT-Free-6.4.2/index.html
@@ -22,6 +22,60 @@
   </head>
   <body>
     <!-- Start your project here-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Your Brand</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#signupModal">Signup</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    
+    <!-- Login Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- Login Form -->
+            <form>
+              <div class="form-group">
+                <label for="loginEmail">Email address</label>
+                <input type="email" class="form-control" id="loginEmail" placeholder="Enter email">
+              </div>
+              <div class="form-group">
+                <label for="loginPassword">Password</label>
+                <input type="password" class="form-control" id="loginPassword" placeholder="Password">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Login</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Signup Modal -->
+
+
+
+
+
     <div class="container">
       <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
         <div class="text-center">
@@ -50,36 +104,3 @@
     <script type="text/javascript"></script>
   </body>
 </html>
-
-
-<!-- Login Form -->
-<div class="container">
-  <h2>Login</h2>
-  <form>
-    <div class="form-group">
-      <label for="loginEmail">Email address</label>
-      <input type="email" class="form-control" id="loginEmail" placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="loginPassword">Password</label>
-      <input type="password" class="form-control" id="loginPassword" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-</div>
-
-<!-- Signup Form -->
-<div class="container">
-  <h2>Signup</h2>
-  <form>
-    <div class="form-group">
-      <label for="signupEmail">Email address</label>
-      <input type="email" class="form-control" id="signupEmail" placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="signupPassword">Password</label>
-      <input type="password" class="form-control" id="signupPassword" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-</div>
