blog/comment form

--- a/index.html
+++ b/index.html
@@ -116,30 +116,36 @@
 </div>
 <!--Sign Up Form End-->
 
-
-<!--BootStrap Things-->
-<div class="container">
-  <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
-    <div class="text-center">
-      <img
-        class="mb-4"
-        src="https://mdbootstrap.com/img/logo/mdb-transparent-250px.png"
-        style="width: 250px; height: 90px"
-      />
-      <h5 class="mb-3">Thank you for using our product. We're glad you're with us.</h5>
-      <p class="mb-3">MDB Team</p>
-      <a
-        class="btn btn-primary btn-lg"
-        href="https://mdbootstrap.com/docs/standard/getting-started/"
-        target="_blank"
-        role="button"
-        >Start MDB tutorial</a
-      >
+<!-- Comment/Blog Section -->
+<div class="container text-center">
+  <h2>Blog Section</h2>
+  <!-- Blog Posts -->
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card mb-4">
+        <div class="card-body">
+          <h5 class="card-title">Blog Post Title</h5>
+          <p class="card-text">This is an example blog post. You can write your content here.</p>
+        </div>
+        <div class="card-footer text-muted">
+          Posted on January 1, 2022
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Comment Form -->
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h4>Leave a Comment:</h4>
+      <form>
+        <div class="form-group">
+          <textarea class="form-control" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
   </div>
 </div>
-<!-- End your project here-->
-
 
 
   <!-- MDB -->
