--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Material Design for Bootstrap</title>
+    <title>Fitness Friends</title>
     <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
   <!-- Bootstrap JavaScript and dependencies -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   
-    <!-- MDB icon -->
-    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+    <!-- Fitness Friend icon -->
+    <link rel="icon" href="Fitness.jpg" type="image/x-icon" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <!-- Google Fonts Roboto -->
     <link
       rel="stylesheet"
@@ -32,10 +30,10 @@
 <!-- NavBar -->
 <!--LogIn and Sign Up Starts-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Fitness Friend</a>
+  <a class="navbar-brand" href="#">
+    <img src="Fitness.jpg" alt="Logo" style="height:55px;"> Fitness Friend</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <span class="navbar-toggler-icon"></span></button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
@@ -83,6 +81,7 @@
 </div>
 </div>
 <!--Login Form End-->
+
 <!--Sign Up Modal-->
 <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -124,11 +123,11 @@
     <div class="col-md-8">
       <div class="card mb-4">
         <div class="card-body">
-          <h5 class="card-title">Blog Post Title</h5>
+          <h5 class="card-title">Fitness Friend Blog</h5>
           <p class="card-text">This is an example blog post. You can write your content here.</p>
         </div>
         <div class="card-footer text-muted">
-          Posted on January 1, 2022
+          Posted on November 20, 2023
         </div>
       </div>
     </div>
